# rust-spark

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/rspark-api/: Cargo.toml
crates/rspark-api/src/: lib.rs  routes.rs  server.rs
crates/rspark-cli/: Cargo.toml
crates/rspark-cli/src/: cli.rs  commands.rs  lib.rs  main.rs  repl.rs
crates/rspark-cluster/: Cargo.toml
crates/rspark-cluster/src/: job.rs  lib.rs  master.rs  partitioner.rs  stage.rs  state.rs  task.rs  worker.rs
crates/rspark-core/: Cargo.toml
crates/rspark-core/src/: error.rs  expr.rs  lib.rs  record.rs  schema.rs  value.rs
crates/rspark-dashboard/: Cargo.toml
crates/rspark-dashboard/src/: assets.rs  lib.rs  server.rs  ui.rs
crates/rspark-exec/: Cargo.toml
crates/rspark-exec/src/: arrow_batch.rs  arrow_ops.rs  executor.rs  lib.rs  operators.rs  partition.rs
crates/rspark-exec/tests/: integration.rs
crates/rspark-ingest/: Cargo.toml
crates/rspark-ingest/src/: lib.rs  main.rs
crates/rspark-operator/: Cargo.toml
crates/rspark-operator/src/: controller.rs  crd.rs  lib.rs  main.rs
crates/rspark-operator/tests/: crd.rs
crates/rspark-pipelines/: Cargo.toml
crates/rspark-pipelines/src/: dag.rs  lib.rs  runner.rs  sink.rs  source.rs  spec.rs
crates/rspark-sql/: Cargo.toml
crates/rspark-sql/src/: expr_builder.rs  lib.rs  parser.rs  plan.rs  planner.rs  session.rs  show_create.rs  table_kind.rs
crates/rspark-storage/: Cargo.toml
crates/rspark-storage/src/: csv_source.rs  json_source.rs  lib.rs  registry.rs  s3_source.rs  s3_writer.rs  source.rs  writer.rs
docker/: Dockerfile  docker-compose.yml
docs/: CLAUDE.md  api.md  architecture.md  cli.md  dashboard.md  deployment.md  headlamp.md  kafka.md  minio.md  operator.md  pipelines.md  skills.md  sql-surface.md
examples/: demo.sh
examples/data/: clickstream.jsonl  employees.csv  events.json  orders.csv  sales.csv  users.csv
examples/e2e/: demo_page.html  drive.js  page_events_pipeline.yaml
examples/pipelines/: clickstream_aggregator.yaml  clickstream_live.yaml  wordcount.yaml
extensions/rspark-tracker/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
k8s/: 00-namespace.yaml  01-configmap.yaml  10-master-service.yaml  11-master-deployment.yaml  20-worker-deployment.yaml  30-ingress.yaml  30-pod-disruption-budgets.yaml  40-configmap.yaml
k8s/headlamp/: 00-namespace-and-rbac.yaml  01-deployment.yaml  02-service.yaml  README.md  apply.sh
k8s/ingest/: 01-deployment.yaml  02-service.yaml  apply.sh
k8s/kafka/: 00-config.yaml  01-statefulset.yaml  02-service.yaml  apply.sh
k8s/minio/: 00-namespace-and-secret.yaml  01-statefulset.yaml  02-service.yaml  03-bucket-init.yaml  apply.sh
k8s/operator/: 00-sparkcluster-crd.yaml  10-rbac.yaml  20-operator-deployment.yaml  30-sparkcluster-demo.yaml  README.md
scripts/: cluster-up.sh  deploy.sh  port-forward.sh  seed-mock-data.sh  sql.sh
scripts/dev/: dashboard-check.mjs
