[package]
name = "rspark-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlparser.workspace = true
regex = "1"
csv.workspace = true
