[package]
name = "rspark-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rspark-core = { path = "../rspark-core" }
rspark-api = { path = "../rspark-api" }
rspark-cluster = { path = "../rspark-cluster" }
rspark-sql = { path = "../rspark-sql" }
rspark-storage = { path = "../rspark-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
