[package]
name = "rspark-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rspark-core = { path = "../rspark-core" }
rspark-sql = { path = "../rspark-sql" }
rspark-storage = { path = "../rspark-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
